--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroui/theme": "^2.4.22",
     "framer-motion": "^12.23.22",
     "next": "^15.5.4",
+    "next-themes": "^0.2.1",
     "openai": "^5.23.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
