--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@chatscope/chat-ui-kit-react": "^2.1.1",
     "@chatscope/chat-ui-kit-styles": "^1.4.0",
+    "@emailjs/browser": "^4.4.1",
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.4",
     "@heroui/theme": "^2.4.22",
@@ -20,6 +21,9 @@
     "openai": "^5.23.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-image-gallery": "^1.4.0",
+    "react-intersection-observer": "^9.16.0",
     "zod": "^3.25.76"
   },
   "devDependencies": {
