--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.4",
     "@heroui/theme": "^2.4.22",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.22",
     "next": "^15.5.4",
     "next-themes": "^0.2.1",
